# bip353

./: Cargo.toml  README.md
src/: ffi.rs  lib.rs  python.rs
tests/: address_parsing.rs  dns_resolution.rs  uri_parsing.rs
